--- a/Tercer parcial/3.3 Ejercicios SQL.md
+++ b/Tercer parcial/3.3 Ejercicios SQL.md
@@ -21,7 +21,9 @@ Consultas
 ---------------
 1. Listado de todos los vehículos que tiene capacidad de trasladar a más de 4 pasajeros, incluye los datos de marca, municipio y placa.
    #### Solución
-   Tselect marca, municipio, placa from automovil where pasajero > 4;
+```sql
+   select marca, municipio, placa from automovil where pasajero > 4;
+```
    #### Salida
 
    | marca  | municipio  | placa   |
@@ -31,9 +33,11 @@ Consultas
    | Honda  | Tulancingo | HJC223E |
    
    
-3. Listado de vehículos que trabajan en el Actopan, incluye los datos de placa, pasajero, modelo y anio.
+2. Listado de vehículos que trabajan en el Actopan, incluye los datos de placa, pasajero, modelo y anio.
    #### Solución
+```sql
    select placa, pasajero, modelo, anio from Automovil where municipio = 'Actopan';
+```
    #### Salida
 
    | placa   | pasajero | modelo  | anio |
@@ -43,9 +47,11 @@ Consultas
    | HJC223E |        3 | Corolla | 2021 |
    
    
-4. Listado de vehículos cuyo año de inicio de operación sea menor o igual a 2023, incluye los datos de marca, modelo y kilometraje.
+3. Listado de vehículos cuyo año de inicio de operación sea menor o igual a 2023, incluye los datos de marca, modelo y kilometraje.
    #### Solución
+```sql
    select marca, modelo, kilometraje from automovil where anio <= 2023;
+```
    #### Salida
    
    | marca  | modelo  | kilometraje |
@@ -56,9 +62,11 @@ Consultas
    | Honda  | City    | 49832       |
    | Toyota | Corolla | 97921       |
       
-6. Listado de vehículos que el kilometraje sea mayor a 5000 y menor a 65000, incluye los datos de modelo, anio y kilometraje.
+4. Listado de vehículos que el kilometraje sea mayor a 5000 y menor a 65000, incluye los datos de modelo, anio y kilometraje.
    #### Solución
+```sql
    select modelo, anio, kilometraje from automovil where 5000 > kilometraje < 65000;
+```
    #### Salida
    
    | modelo  | anio | kilometraje |
@@ -74,9 +82,11 @@ Consultas
    | Corolla | 2021 | 97921       |
 
 
-7. Listado de vehículos que corresponde verificación en septiembre-octubre, incluye los datos de marca, municipio y placa.
+5. Listado de vehículos que corresponde verificación en septiembre-octubre, incluye los datos de marca, municipio y placa.
    #### Solución
+```sql
    select marca, municipio, placa from automovil where (select substr(placa, 6)) < 5;
+```
    #### Salida
    
    | marca  | municipio  | placa   |
